samples/negative/resources/fp34/14.otf
version https://git-lfs.github.com/spec/v1
oid sha256:ab42e22c03d7ecdd6ca139481eaed98189b30af7d8cc25f4d9d3eea7aca9c20c
size 69160
